isfs-daq/etc/network/isfs-iptables.rules
# Generated by iptables-save v1.4.21 on Mon Jun 22 14:25:56 2020
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [57:49471]
:LOGGING - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A INPUT -s 128.117.0.0/16 -p tcp -m tcp --dport 873 -j ACCEPT
-A INPUT -s 128.117.0.0/16 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 128.117.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 128.117.0.0/16 -p icmp -j ACCEPT
-A INPUT -s 128.117.0.0/16 -p udp -m udp --dport 323 -j ACCEPT
-A INPUT -s 128.117.0.0/16 -p tcp -m tcp --dport 30000 -j ACCEPT
-A INPUT -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -f -j ACCEPT
-A INPUT -j LOGGING
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -j ACCEPT
-A OUTPUT -d 128.117.188.122/32 -j ACCEPT
-A OUTPUT -d 128.117.15.37/32 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "isfs-iptables dropped: " --log-level 6
-A LOGGING -j DROP
COMMIT
# Completed on Mon Jun 22 14:25:56 2020
